# EasyCRUD

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
EasyCRUD/: Cargo.toml
EasyCRUD/src/: main.rs
EasyCRUD/src/api/: executeSQL.rs  login.rs
EasyCRUD/src/middleware/: auth.rs
EasyCRUD/src/ui/: index.rs  login.rs
EasyCRUD/static/: index.html  login.html  login.js  main.js
myCRUD/: Cargo.toml  config.toml
myCRUD/src/: main.rs
myCRUD/src/api/: executeSQL.rs  login.rs  mod.rs
myCRUD/src/middleware/: auth.rs  settings.rs
myCRUD/src/ui/: index.rs  login.rs
myCRUD/static/: index.html  login.html  main.js
