[package]
name = "EasyCRUD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
serde = {version = "1.0.163", features = ["derive"]}
mysql = "23.0.1"
config = "0.13.1"
