[package]
name = "EasyCRUD"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
serde = {version = "1.0.163", features = ["derive"]}
sqlx = { version = "=0.6.3", features = [ "runtime-actix-native-tls", "mysql" ] }
config = "0.13.1"
futures = "0.3.28"
mysql_common = "0.30.4"